Fix size issues on mobile

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,7 +10,7 @@ body {
 	font-size: 16px;
 	color: $black;
 	background-color: $lighter-yellow;
-	width: 100vw;
+	width: 100%;
 	max-width: 100%;
 	overflow-x: hidden;
 
