--- a/frontend/src/styles/FilterBtn.module.scss
+++ b/frontend/src/styles/FilterBtn.module.scss
@@ -1,12 +1,16 @@
 @import 'variables';
 
 
+.filterContainer {
+	position: relative;
+}
+
 .filterBtn {
 	@extend %raisedBtn;
 	background-color: $purple;
 	color: $white;
 	height: 2rem;
-	margin: 0 7px 7px 0;
+	margin: 4px;
 	padding: 0 10px;
 	border-radius: 5px;
 	position: relative;
@@ -34,23 +38,24 @@
 
 .expanded {
 	position: absolute;
-	top: 100%;
-	max-width: 100vw;
+	width: 15rem;
+	top: calc(100% - 4px);
+	left: 50%;
+	transform: translate(-50%, 0);
 	background-color: $yellow;
 	border-radius: 15px;
-	transition: height 0.2s ease-in-out;
 	z-index: 996;
 	box-shadow: 0 4px 12px $shadow;
+	transition: height 0.2s ease-in-out;
 }
 
 .filterOption {
 	@extend %flex-center;
 	height: 50%;
 	width: 100%;
+	padding: 0 15px;
 	color: $purple;
 	border-radius: 0 0 15px 15px;
-	white-space: nowrap;
-	padding: 0 15px;
 	@include colorize($yellow);
 	cursor: pointer;
 }
