--- a/frontend/src/styles/Main.module.scss
+++ b/frontend/src/styles/Main.module.scss
@@ -4,5 +4,5 @@
 .main {
 	@extend %flex-center;
 	margin-top: $header-height;
-	width: 100vw;
+	width: 100%;
 }
