--- a/frontend/src/styles/MapModal.module.scss
+++ b/frontend/src/styles/MapModal.module.scss
@@ -4,8 +4,8 @@
 .modal {
 	@extend %flex-center;
 	z-index: 1000;
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
